<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

  <EditText
      android:id="@+id/edit_email"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/text_margin"
      android:autofillHints="@string/email"
      android:hint="@string/email"
      android:contentDescription="Email field for login"
      android:inputType="textEmailAddress"
      app:layout_constraintBottom_toTopOf="@+id/edit_password"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_chainStyle="packed" />

  <EditText
      android:id="@+id/edit_password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/text_margin"
      android:autofillHints="Password"
      android:ems="10"
      android:hint="@string/password"
      android:contentDescription="Password field for login"
      android:inputType="textPassword"
      app:layout_constraintBottom_toTopOf="@+id/btn_log_in"
      app:layout_constraintEnd_toEndOf="@+id/edit_email"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="@+id/edit_email"
      app:layout_constraintTop_toBottomOf="@+id/edit_email" />

  <Button
      android:id="@+id/btn_log_in"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/login"
      android:contentDescription="Click to log in"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="@+id/edit_password"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="@+id/edit_password"
      app:layout_constraintTop_toBottomOf="@+id/edit_password" />
</androidx.constraintlayout.widget.ConstraintLayout>