...
      app:layout_constraintBottom_toTopOf="@+id/button1"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <Button
      android:id="@+id/button0"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/btn_margin"
      android:text="@string/blank"
      app:layout_constraintBottom_toTopOf="@+id/button3"
      app:layout_constraintEnd_toEndOf="@id/button3"
...
      android:text="@string/blank"
      app:layout_constraintEnd_toEndOf="@id/button5"
      app:layout_constraintStart_toStartOf="@+id/button5"
      app:layout_constraintTop_toBottomOf="@id/button5" />

  <Button
      android:id="@+id/back_btn"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/btn_margin"
      android:text="@string/quit"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
...
