...
        android:layout_height="wrap_content"
        app:layoutManager="LinearLayoutManager"
        tools:listitem="@layout/fragment_item" />
  </LinearLayout>

  <com.google.android.material.floatingactionbutton.FloatingActionButton
      android:id="@+id/fab_new_game"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/text_margin"
      android:contentDescription="@string/new_game"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
...
